--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
     "framer-motion": "^6.3.3",
     "material-ui-phone-number": "^3.0.0",
+    "mysql2": "^2.3.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
