--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://gitlab.com/jadhavganesh14091999/vikrawin#readme",
   "dependencies": {
+    "@mui/x-data-grid": "^5.11.0",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
     "express": "^4.18.1",
