--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Online Bidding Platform for Farmer to sell crops.",
   "main": "server.js",
+  "engines": {
+    "node": "16.15.0",
+    "npm": "8.5.5"
+  },
   "scripts": {
     "server": "nodemon server",
     "client": "npm start --prefix client",
