--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "npm": "8.5.5"
   },
   "scripts": {
+    "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "start": "concurrently \"npm run server\" \"npm run client\" ",
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
