--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0"
+    "nodemailer": "^6.7.5",
+    "rand-token": "^1.0.1",
+    "sequelize": "^6.19.0",
+    "twilio": "^3.77.1"
   },
   "devDependencies": {
     "concurrently": "^7.2.0",
