--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^6.3.3",
     "material-ui-phone-number": "^3.0.0",
     "mysql2": "^2.3.3",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
