--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "8.5.5"
   },
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 5000 --reporter mochawesome",
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
@@ -39,9 +39,11 @@
     "twilio": "^3.77.1"
   },
   "devDependencies": {
+    "axios": "^0.27.2",
     "chai": "^4.3.6",
     "concurrently": "^7.2.0",
     "mocha": "^10.0.0",
+    "mochawesome": "^7.1.3",
     "nodemon": "^2.0.15"
   }
 }
