--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mui/x-data-grid": "^5.11.0",
     "bcrypt": "^5.0.1",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
